--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/nalcus/shorturlnalc/issues"
   },
-  "homepage": "https://github.com/nalcus/shorturlnalc#readme"
+  "homepage": "https://github.com/nalcus/shorturlnalc#readme",
+  "dependencies": {
+    "express": "^4.15.2"
+  }
 }
